kubernetes/krotova_dz/1_homework/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappdeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myappdeploy
  template:
    metadata:
      labels:
        app: myappdeploy
        deploy: blue
    spec:
      containers:
      - name: myappdeploy
        image: ekaterinakrotova/myapp:1.0.0
        ports:
        - containerPort: 5000
