kubernetes/krotova_dz/1_homework/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myappservice
spec:
  selector:
    deploy: blue
  ports:
  - name: myapp
    port: 5000
    # targetPort: 5000
    # nodePort range - 30000-32767
  #   nodePort: 30080
  # type: NodePort
